intent service up and running fix database structure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".ViewModels" />
         <activity android:name=".DisplayMarkovTweets"
             android:noHistory="true"/>
+        <service android:name=".GetUserDataIntentService"/>
     </application>
 
 </manifest>
